[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "Notify-Bridge-Bot"
version = "1.1.1"
description = "海上修机师客服系统"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "napcat-sdk>=0.6.8",
    "pyyaml>=6.0.3",
]

[project.scripts]
notify-bridge-bot = "src.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["src"]
